--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>WallysLS</title>
+    <title>WallysLS | Developer</title>
   </head>
   <body>
     <div id="root"></div>
